[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yalvpy"
description = "Yet another libvirt wrapper implemented in python"
authors = [
    {name = "Yasufumi Ogawa", email = "yasufum.o@gmail.com"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.0.1"

[project.scripts]
lvpy = "lvpy.main:main"

[tool.setuptools.packages]
find = {}

